## PLUXML 5.1.7 (sortie : xx/xx/2012) ## 

[+] plxShow:tagList(): gestion de la taille des tags (#tag_size)
[+] Administration: sidebar statique
[+] plxFeed: ajouts des hooks plxFeedRssArticlesXml, plxFeedRssCommentsXml, plxFeedAdminCommentsXml
[+] plxFeed: changement du nom des méthodes getAdminCommentaires, getRssCommentaires en getAdminComments et getRssComments
[+] Les fichiers de parametres des plugins sont désormais stockés dans le dossier de configuration de PluXml
[+] Administration: Paramètres > Plugins -> Ordre de chargement des plugins
[+] Administration: Paramètres > Configuration avancée -> Ajout du choix de l'emplacement des fichiers de configuration (dossier)
[+] Administration: Paramètres > Options d'affichage > Éditer les fichiers du thème : edition des fichiers dans les sous-dossiers
[+] Amélioration de la traduction en allemand (contribution Jürgen K.)
[+] plxShow::comMessage() : ajout parametre format (variable #com_message)
[-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
BUG plxShow:pagination(): lien "première page" collé au lien "précédente"
BUG plxPlugins::getInfos(): mauvais test sur la récupération du site
BUG sitemap: mauvais format de date dans la balise lastmod
BUG plxShow::catName() : appel de la fonction carUrl au lieu de catUrl
BUG plxUtils::makeThumb() : problème si largeur ou hauteur non renseignée
BUG plxUtils::strCut() : problème pour couper une chaine de caractère avec l'encodage UTF-8
BUG Session perdue sous Chrome MacOSX
BUG Réécriture d'url: mauvaise gestion des paramètres dans l'url (&)
BUG plxShow::artAuthorInfos() : erreur si l'auteur n'existe plus
BUG plxShow::staticList() : tri des menus différents si paramètre extra renseigné ou pas
BUG plxShow::templateCss() : mauvais chemin dans le test existence fichier css (contribution danielsan)
Sécurité: Faille XSS possible sur la récupération de l'adresse ip d'un visiteur (remerciement à The Lizard King)